--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-paper": "^5.12.5"
+    "react-native-paper": "^5.12.5",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
