--- a/package.json
+++ b/package.json
@@ -10,23 +10,22 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "expo": "~51.0.28",
+    "expo": "~51.0.37",
     "expo-asset": "~10.0.10",
     "expo-file-system": "~17.0.1",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-masked-text": "^1.13.0",
-    "react-native-paper": "^5.12.5",
-    "react-native-picker": "^4.3.7",
-    "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
@@ -34,7 +33,10 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "@expo/config-plugins": "~8.0.0"
+  }
 }
