--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#f0f0f0"
       },
       "package": "br.com.lesnik.moneybuddy",
