--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.37",
     "expo-asset": "~10.0.10",
     "expo-file-system": "~17.0.1",
@@ -22,12 +23,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-date-picker": "^5.0.7",
     "react-native-masked-text": "^1.13.0",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
