ajustes nas funcoes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Money Buddy",
-    "slug": "Money Buddy",
+    "slug": "MoneyBuddy",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
